baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__phase3a__chained_optional_field_access.snap
---
source: crates/baml_tests/src/compiler2_tir/phase3a.rs
expression: "render_tir(&db, file)"
---
class user.Address {
  street: string
}
class user.User {
  address: user.Address?
}
function user.f(u: user.User?) -> string? throws never {
  { : string?
  }
  !! 96..119: missing return: expected `string?`
}
